# MedGemma-Nutrition

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup_project.py  test_rag_engine.py
assets/guidelines/: README.md
data/: patients.db
data/chroma_db/6225ad34-dcc8-4a77-9e0d-ba8d6f2fbd90/: index_metadata.pickle
modules/: __init__.py  database.py  medgemma_model.py  rag_engine.py
notebooks/: medgemma.ipynb
