[project]
name = "medgemma-nutrition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb>=1.5.0",
    "git-lfs>=1.6",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.36.2",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-qwen3>=0.1.2",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pymupdf>=1.26.7",
    "pyngrok>=7.5.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.54.0",
    "torch",
    "torchvision",
    "transformers>=4.57.6",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
